# dr_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  evals.py  models.py  planning.md  prompt.py  pyproject.toml  readme_english.md  requirements.txt  run_agent.py  tools.py
tools/: __init__.py  doc_tools.py  fetch_tools.py  paper_tools.py  search_tools.py  utils.py
training/: augment_data.py  benchmark_splits.py  collect_teacher.py  convert_sharegpt.py  download_weave_export.py  extract_weave.py  import_public_trajectories.py  merge_and_split.py  merge_lora.py
training/configs/: dataset_info.json  qwen3_8b_sft.yaml
training/data/: benchmark_splits.json  latest_adapter_dir.txt
training/data/sft_ready/: answer.json  conversion_stats.json  intent.json  merge_stats.json  planning.json  search.json  test.json  train.json  val.json
training/scripts/: run_eval.sh  run_merge.sh  run_teacher.sh  run_training.sh  setup_env.sh
utils/: convert_to_md.py  helpers.py  paper_search_pipeline.py  web_seach_pipeline.py
