[project]
name = "dr-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "chardet>=5.2.0,<6",
    "datasets>=2.18.0",
    "huggingface-hub>=0.23.0",
    "litellm>=1.81.0,<=1.82.6",
    "openai>=2.30.0",
    "openai-agents>=0.13.5",
    "pydantic>=2.12.5",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tavily-python>=0.7.11",
    "trafilatura>=2.0.0",
    "wandb>=0.25.1",
    "weave>=0.52.36",
]

